--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 ---
 layout: page
 title: Amir Seyvani Asl
-subtitle: This is where I will tell my friends way too much about me
+subtitle: MBA Student
+meta-title: "Amir Seyvani Asl"
+meta-description: "Studing MBA at Allameh Tabataba'e University, former Computer Science at Sharif University"
 use-site-title: true
 ---
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140685352-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-140685352-1');
+</script>
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
