--- a/cv.html
+++ b/cv.html
@@ -5,5 +5,5 @@ layout: page
 <!-- Run jekyll serve, and go to localhost:4000 in web browser -->
 
 <!DOCTYPE html><html>
-<embed src="https://lindsayberry.github.io/files/Berry_CV.pdf" width="750px" height="1250px" align = "center"/>
+<embed src="https://amirseyvani.github.io/files/CV - Amir Seyvani Asl.pdf" width="750px" height="1250px" align = "center"/>
 </html>
