--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ meta-title: "Amir Seyvani Asl"
 meta-description: "Studing MBA at Allameh Tabataba'e University, former Computer Science at Sharif University"
 use-site-title: true
 ---
+<meta name="google-site-verification" content="a_R6yln_HOmcQ3JSP1nsOT_YmLyqfuvLpfdy61CKPw8" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140685352-1"></script>
