--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Amir Seyvani Asl
-subtitle: MBA Student test
+subtitle: MBA Student
 meta-title: "Amir Seyvani Asl"
 meta-description: "Studing MBA at Allameh Tabataba'e University, former Computer Science at Sharif University"
 use-site-title: true
