--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Amir Seyvani Asl
 subtitle: Data Scientist
 meta-title: "Amir Seyvani Asl"
-meta-description: "Studing MBA at Allameh Tabataba'e University, former Computer Science at Sharif University"
+meta-description: "MBA Student at Allameh Tabataba'e University, former Computer Science at Sharif University"
 use-site-title: true
 ---
 <meta name="google-site-verification" content="a_R6yln_HOmcQ3JSP1nsOT_YmLyqfuvLpfdy61CKPw8" />
